--- a/Render Engine.vcxproj.filters
+++ b/Render Engine.vcxproj.filters
@@ -18,5 +18,12 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Common\ogldev_util.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="shader.vert" />
+    <None Include="shader.frag" />
   </ItemGroup>
 </Project>
